clusters/homekube/apps/mattermost/mattermost-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mattermost
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
  hostnames:
    - mm.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: mattermost-team-edition
          port: 8065
