clusters/homekube/apps/mattermost/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mattermost
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mattermost-team-edition
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: istio-ingress
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
